@@ -100,7 +100,12 @@
       
     <h3>Latest release</h3>
 
-      <p>There is currently no separate development release.</p>
+<!--      <p>There is currently no separate development release.</p>-->
+      <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.0.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.11.0</a></div> 
       
     <h3>Past releases</h3>
       <div class="download">
