@@ -70,6 +70,16 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+
+	    <h3>May 12, 2008</h3>
+   	      <b>Unstable</b> version 0.11.0 released!  New in this release:
+   	      <ul>
+   	        <li>New <a href="http://live.gnome.org/Tasque">Tasque</a> add-in.</li>
+   	        <li>Make a new Notebook right from Notebook item in a note window's toolbar.</li>
+   	        <li>Printing ported Gtk.Print.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_11_0/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
 	    
 	    <h3>March 10th 2008</h3>
    	      Stable version 0.10.0 released! New features since previous stable
