@@ -1,3 +1,8 @@
+2008-05-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.11.0 release.
+	* download.html: Ditto.
+
 2008-03-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.10.0 release.
